fix failing tests for merge conflicts
Signed-off-by: Neeharika-Sompalli <neeharika.sompalli@swirldslabs.com>