@@ -17,6 +17,7 @@ package com.hedera.node.app.service.token.impl;
 
 import static com.hedera.node.app.spi.state.StateKeys.ACCOUNT_STORE;
 import static com.hedera.node.app.spi.state.StateKeys.ALIASES_STORE;
+import static com.hedera.test.utils.IdUtils.asAccount;
 import static com.hedera.test.utils.IdUtils.asAliasAccount;
 import static com.hedera.test.utils.TxnUtils.buildTransactionFrom;
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -28,6 +29,8 @@ import com.hedera.node.app.spi.state.States;
 import com.hedera.node.app.spi.state.impl.InMemoryStateImpl;
 import com.hedera.node.app.spi.state.impl.RebuiltStateImpl;
 import com.hedera.services.legacy.core.jproto.JKey;
+import com.hedera.services.state.merkle.MerkleAccount;
+import com.hedera.services.utils.EntityNum;
 import com.hedera.services.utils.KeyUtils;
 import com.hederahashgraph.api.proto.java.AccountID;
 import com.hederahashgraph.api.proto.java.CryptoCreateTransactionBody;
@@ -36,7 +39,7 @@ import com.hederahashgraph.api.proto.java.Timestamp;
 import com.hederahashgraph.api.proto.java.Transaction;
 import com.hederahashgraph.api.proto.java.TransactionBody;
 import com.hederahashgraph.api.proto.java.TransactionID;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import org.apache.commons.codec.DecoderException;
 import org.junit.jupiter.api.BeforeEach;
@@ -48,11 +51,15 @@ import org.mockito.junit.jupiter.MockitoExtension;
 @ExtendWith(MockitoExtension.class)
 class AccountStoreTest {
     private Key key = KeyUtils.A_COMPLEX_KEY;
+    private Key payerKey = KeyUtils.A_COMPLEX_KEY;
     private Timestamp consensusTimestamp = Timestamp.newBuilder().setSeconds(1_234_567L).build();
     private AccountID payerAlias = asAliasAccount(ByteString.copyFromUtf8("testAlias"));
+    private AccountID payer = asAccount("0.0.3");
+    private EntityNum payerNum = EntityNum.fromInt(3);
 
     @Mock private RebuiltStateImpl aliases;
     @Mock private InMemoryStateImpl accounts;
+    @Mock private MerkleAccount account;
     @Mock private States states;
     private AccountStore subject;
 
@@ -66,26 +73,35 @@ class AccountStoreTest {
     @Test
     void createAccountSigningMetaChecksAccounts() throws DecoderException {
         final var jkey = JKey.mapKey(key);
+        final var payerJkey = JKey.mapKey(payerKey);
+        given(accounts.get(payerNum)).willReturn(Optional.of(account));
+        given(account.getAccountKey()).willReturn(payerJkey);
 
-        final var txn = createAccountTransaction(payerAlias);
-        final var meta = subject.createAccountSigningMetadata(txn, Optional.of(jkey), true);
+        final var txn = createAccountTransaction(payer);
+        final var meta = subject.createAccountSigningMetadata(txn, Optional.of(jkey), true, payer);
 
         assertFalse(meta.failed());
         assertEquals(txn, meta.transaction());
-        assertEquals(jkey, meta.getPayerSig());
-        assertEquals(Collections.emptyList(), meta.getOthersSigs());
+        assertEquals(payerJkey, meta.getPayerSig());
+        assertEquals(List.of(jkey), meta.getOthersSigs());
     }
 
     @Test
     void createAccountSigningMetaChecksAlias() throws DecoderException {
         final var jkey = JKey.mapKey(key);
+        final var payerJkey = JKey.mapKey(payerKey);
+        given(aliases.get(payerAlias.getAlias())).willReturn(Optional.of(payerNum));
+        given(accounts.get(payerNum)).willReturn(Optional.of(account));
+        given(account.getAccountKey()).willReturn(payerJkey);
+
         final var txn = createAccountTransaction(payerAlias);
-        final var meta = subject.createAccountSigningMetadata(txn, Optional.of(jkey), true);
+        final var meta =
+                subject.createAccountSigningMetadata(txn, Optional.of(jkey), true, payerAlias);
 
         assertFalse(meta.failed());
         assertEquals(txn, meta.transaction());
-        assertEquals(jkey, meta.getPayerSig());
-        assertEquals(Collections.emptyList(), meta.getOthersSigs());
+        assertEquals(payerJkey, meta.getPayerSig());
+        assertEquals(List.of(jkey), meta.getOthersSigs());
     }
 
     private Transaction createAccountTransaction(final AccountID payer) {
