@@ -47,7 +47,7 @@ class TransactionMetadataTest {
     void gettersWorkAsExpectedWhenOtherSigsDoesntExist() throws DecoderException {
         final var txn = createAccountTransaction();
         final var payerKey = JKey.mapKey(key);
-        subject = new TransactionMetadata(txn, false, List.of(payerKey));
+        subject = new TransactionMetadata(txn, false, payerKey, Collections.emptyList());
 
         assertFalse(subject.failed());
         assertEquals(txn, subject.transaction());
